add mobile support

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>cobaTailwindCSS</title>
+    <title>Simple Profile</title>
   </head>
   <body class="dark:bg-gray-800">
     <div class="flex flex-col py-5">
@@ -30,9 +30,9 @@
       <div class="flex flex-col items-center mt-10 space-y-3">
         <div
           class="
-            grid grid-flow-col
-            lg:grid-cols-4 lg:grid-rows-1
+            grid grid-flow-col grid-cold-2 grid-rows-2
             sm:grid-cols-2 sm:grid-rows-2
+            lg:grid-cols-4 lg:grid-rows-1
             gap-4
           "
         >
@@ -112,11 +112,11 @@
       </div>
 
       <div class="flex flex-col mt-10 mx-10 lg:mx-auto">
-        <div class="grid grid-flow-col grid-rows-2 grid-cols-3">
+        <div class="grid gap-4 sm:grid-flow-col sm:grid-rows-2 sm:grid-cols-3">
           <div
             class="
               transform
-              -rotate-2
+              sm:-rotate-2
               sm:scale-75
               lg:scale-90
               hover:scale-100
@@ -134,7 +134,7 @@
           <div
             class="
               transform
-              rotate-2
+              sm:rotate-2
               sm:scale-75
               lg:scale-90
               hover:scale-100
@@ -152,7 +152,7 @@
           <div
             class="
               transform
-              rotate-1
+              sm:rotate-1
               sm:scale-75
               lg:scale-90
               hover:scale-100
@@ -170,8 +170,8 @@
           <div
             class="
               transform
-              -rotate-1
-              translate-y-7
+              sm:-rotate-1
+              sm:translate-y-7
               sm:scale-75
               lg:scale-90
               hover:scale-100
@@ -189,7 +189,7 @@
           <div
             class="
               transform
-              rotate-2
+              sm:rotate-2
               sm:scale-75
               lg:scale-90
               hover:scale-100
@@ -207,7 +207,7 @@
           <div
             class="
               transform
-              -rotate-2
+              sm:-rotate-2
               sm:scale-75
               lg:scale-90
               hover:scale-100
